--- a/wxAppDemo02/project.config.json
+++ b/wxAppDemo02/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
-	"appid": "wx9399b6c1887056c2",
+	"appid": "wx258f784d74c814b9",
 	"projectname": "wxAppDemo02",
 	"condition": {
 		"search": {
