--- a/wxAppDemo02/app.json
+++ b/wxAppDemo02/app.json
@@ -1,17 +1,38 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/about/about"
   ],
   "permission": {
     "scope.userLocation": {
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
     }
   },
+  "tabBar": {
+    "color": "#666",
+    "selectedColor": "#268dcd",
+    "borderStyle": "white",
+    "backgroundColor": "#fafafa",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "iconPath": "image/ing.png",
+        "selectedIconPath": "image/ing-active.png",
+        "text": "服务列表"
+      },
+      {
+        "pagePath": "pages/about/about",
+        "iconPath": "image/coming.png",
+        "selectedIconPath": "image/coming-active.png",
+        "text": "关于我们"
+      }
+    ]
+  },
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "华嫂家政",
     "navigationBarTextStyle":"black"
   }
 }
